force-app/main/default/objects/Lead/fields/Fitness_Rank__c.field-meta.xml
<CustomField>
    <fullName>Fitness_Rank__c</fullName>
    <description>Values pulled from Marketo</description>
    <label>Fitness Rank</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>