force-app/main/default/objects/Lead/fields/gaURL__c.field-meta.xml
<CustomField>
    <fullName>gaURL__c</fullName>
    <label>gaURL</label>
    <type>Url</type>
</CustomField>