force-app/main/default/objects/Lead/fields/Global_MQL__c.field-meta.xml
<CustomField>
    <fullName>Global_MQL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global MQL</label>
    <type>Checkbox</type>
</CustomField>