force-app/main/default/objects/Lead/fields/Global_MQL_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Global_MQL_Assignment_Date__c</fullName>
    <inlineHelpText>Date the Marketing lead was assigned to Sales.</inlineHelpText>
    <label>Global MQL Assignment Date</label>
    <type>Date</type>
</CustomField>