force-app/main/default/objects/Lead/fields/iMC_Lead_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>iMC_Lead_Record_ID__c</fullName>
    <label>iMC Lead Record ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>