force-app/main/default/objects/Lead/fields/Information_Request__c.field-meta.xml
<CustomField>
    <fullName>Information_Request__c</fullName>
    <description>For website form, this is where the leads enter what information they would like to receive.</description>
    <label>Information Request</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>