force-app/main/default/objects/Lead/fields/Invoice_Types__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Types__c</fullName>
    <description>*BILLING FIELD* Field to indicate the invoice reports that will be generated per bill run for the account.</description>
    <label>Invoice Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Summary</fullName>
                <default>true</default>
                <label>Account Summary</label>
            </value>
            <value>
                <fullName>Department Summary</fullName>
            </value>
            <value>
                <fullName>Access Code Summary</fullName>
            </value>
            <value>
                <fullName>Access Code Detail</fullName>
            </value>
            <value>
                <fullName>Conference Detail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>