force-app/main/default/objects/Lead/fields/isCloned__c.field-meta.xml
<CustomField>
    <fullName>isCloned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures and is set when the Clone button is used for adoption reporting purposes.  Only visible to Admin page layout</description>
    <label>isCloned</label>
    <type>Checkbox</type>
</CustomField>