force-app/main/default/objects/Lead/fields/isLead__c.field-meta.xml
<CustomField>
    <fullName>isLead__c</fullName>
    <defaultValue>true</defaultValue>
    <description>used to determine if an account is created during lead conversion</description>
    <label>isLead</label>
    <type>Checkbox</type>
</CustomField>