force-app/main/default/objects/Lead/fields/ITF_Add_On__c.field-meta.xml
<CustomField>
    <fullName>ITF_Add_On__c</fullName>
    <defaultValue>150</defaultValue>
    <inlineHelpText>ITF Add-on Rate per 10 international lines booked.</inlineHelpText>
    <label>ITF Add On</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>