force-app/main/default/objects/Lead/fields/Janati_RR__Round_Robin_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Janati_RR__Round_Robin_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Round Robin Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>