force-app/main/default/objects/Lead/fields/Language_Preference__c.field-meta.xml
<CustomField>
    <fullName>Language_Preference__c</fullName>
    <description>used to set the preferred language for the lead</description>
    <label>Language Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EN</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>