force-app/main/default/objects/Lead/fields/Last_modified_by_non_admin__c.field-meta.xml
<CustomField>
    <fullName>Last_modified_by_non_admin__c</fullName>
    <defaultValue>$User.FirstName + $User.LastName</defaultValue>
    <label>Last modified by (non-admin)</label>
    <length>55</length>
    <type>Text</type>
</CustomField>