force-app/main/default/objects/Lead/fields/Lead_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Reason__c</fullName>
    <label>Lead Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate Lead / Customer / Prospect</fullName>
            </value>
            <value>
                <fullName>Inaccurate Data / Missing Data</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Insufficient Budget</fullName>
            </value>
            <value>
                <fullName>Interested in Content Only</fullName>
            </value>
            <value>
                <fullName>Not Decision Maker</fullName>
            </value>
            <value>
                <fullName>Missing Product Functionality</fullName>
            </value>
            <value>
                <fullName>Opted for Competitor</fullName>
            </value>
            <value>
                <fullName>Looking for Customer Support</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>