force-app/main/default/objects/Lead/fields/Lead_Status_Text__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Text__c</fullName>
    <formula>TEXT(Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Status</label>
    <type>Text</type>
</CustomField>