force-app/main/default/objects/Lead/fields/Marketing_Program__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Program__c</fullName>
    <label>Marketing Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Madison Logic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>