force-app/main/default/objects/Lead/fields/MQL_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>MQL_Assignment_Date__c</fullName>
    <label>Marketing Qualified Date</label>
    <type>DateTime</type>
</CustomField>