force-app/main/default/objects/Lead/fields/MQL_Intl_Lead__c.field-meta.xml
<CustomField>
    <fullName>MQL_Intl_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will auto check if lead is ever assigned to que &quot;PGi-Lead-Intl Online&quot; and then assigns back out to another user or que unless that que is &quot;PGi-Lead-Intl Disqualified Leads&quot;</description>
    <label>MQL Intl Lead</label>
    <type>Checkbox</type>
</CustomField>