force-app/main/default/objects/Lead/fields/No_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>No_of_Employees__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>No. of Employees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 250</fullName>
            </value>
            <value>
                <fullName>251-500</fullName>
            </value>
            <value>
                <fullName>501-1,000</fullName>
            </value>
            <value>
                <fullName>1,001-2,500</fullName>
            </value>
            <value>
                <fullName>2,501-10,000</fullName>
            </value>
            <value>
                <fullName>10,001-20,000</fullName>
            </value>
            <value>
                <fullName>20,000+</fullName>
            </value>
            <value>
                <fullName>1,001-5,000</fullName>
            </value>
            <value>
                <fullName>1000+</fullName>
            </value>
            <value>
                <fullName>100 to 349</fullName>
            </value>
            <value>
                <fullName>101-250</fullName>
            </value>
            <value>
                <fullName>11-25</fullName>
            </value>
            <value>
                <fullName>11 to 49</fullName>
            </value>
            <value>
                <fullName>1 to 10</fullName>
            </value>
            <value>
                <fullName>26-50</fullName>
            </value>
            <value>
                <fullName>350 to 499</fullName>
            </value>
            <value>
                <fullName>5,001-10,000</fullName>
            </value>
            <value>
                <fullName>500 to 1000</fullName>
            </value>
            <value>
                <fullName>50 to 99</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>Greater than 10,000</fullName>
            </value>
            <value>
                <fullName>Less than 10</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>