force-app/main/default/objects/Lead/fields/Number_of_Opens__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Opens__c</fullName>
    <description>Individual Email Results Number of Clicks</description>
    <label>Number of Opens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>