force-app/main/default/objects/Lead/fields/Number_of_Webcasts_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Webcasts_per_Month__c</fullName>
    <label>Number of Webcasts per Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 5</fullName>
            </value>
            <value>
                <fullName>5 - 20</fullName>
            </value>
            <value>
                <fullName>20 - 50</fullName>
            </value>
            <value>
                <fullName>50 or more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>