force-app/main/default/objects/Lead/fields/Omniture_Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Omniture_Campaign_Code__c</fullName>
    <label>Inbound Call Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BLUE</fullName>
            </value>
            <value>
                <fullName>COPPER</fullName>
            </value>
            <value>
                <fullName>CYAN</fullName>
            </value>
            <value>
                <fullName>GOLD</fullName>
            </value>
            <value>
                <fullName>GREEN</fullName>
            </value>
            <value>
                <fullName>GREY</fullName>
            </value>
            <value>
                <fullName>NAVY</fullName>
            </value>
            <value>
                <fullName>NO COLOR</fullName>
            </value>
            <value>
                <fullName>OLIVE</fullName>
            </value>
            <value>
                <fullName>ORANGE</fullName>
            </value>
            <value>
                <fullName>PERIWINKLE</fullName>
            </value>
            <value>
                <fullName>PINK</fullName>
            </value>
            <value>
                <fullName>PURPLE</fullName>
            </value>
            <value>
                <fullName>RED</fullName>
            </value>
            <value>
                <fullName>SKY BLUE</fullName>
            </value>
            <value>
                <fullName>VIOLET</fullName>
            </value>
            <value>
                <fullName>WHITE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>