force-app/main/default/objects/Lead/fields/Omniture_Campaign_Code_Copy__c.field-meta.xml
<CustomField>
    <fullName>Omniture_Campaign_Code_Copy__c</fullName>
    <label>Campaign Code(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>