force-app/main/default/objects/Lead/fields/Omniture_Campaign_Code_No_Match_Found__c.field-meta.xml
<CustomField>
    <fullName>Omniture_Campaign_Code_No_Match_Found__c</fullName>
    <label>Omniture Campaign Code (No Match Found)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>