force-app/main/default/objects/Lead/fields/Owner_s_Name_if_Queue__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Name_if_Queue__c</fullName>
    <formula>Owner:Queue.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner&apos;s Name (if Queue)</label>
    <type>Text</type>
</CustomField>