force-app/main/default/objects/Lead/fields/Owners_Channel_Formula__c.field-meta.xml
<CustomField>
    <fullName>Owners_Channel_Formula__c</fullName>
    <formula>TEXT(Owner:User.Channel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner&#39;s Channel</label>
    <type>Text</type>
</CustomField>