force-app/main/default/objects/Lead/fields/Owners_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owners_Manager__c</fullName>
    <formula>Owner:User.Manager.FirstName + &quot; &quot; +  Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owners Manager</label>
    <type>Text</type>
</CustomField>