force-app/main/default/objects/Lead/fields/Owners_Region_Formula__c.field-meta.xml
<CustomField>
    <fullName>Owners_Region_Formula__c</fullName>
    <formula>TEXT(Owner:User.User_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner&apos;s Region</label>
    <type>Text</type>
</CustomField>