force-app/main/default/objects/Lead/fields/OwnersTitle__c.field-meta.xml
<CustomField>
    <fullName>OwnersTitle__c</fullName>
    <formula>Owner:User.Title</formula>
    <label>Owner&apos;s Title</label>
    <type>Text</type>
</CustomField>