force-app/main/default/objects/Lead/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Value does not exist or does not match filter criteria. Only Accounts with a Type of Partner can be selected.</errorMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Leads</relationshipLabel>
    <relationshipName>Lead_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>