force-app/main/default/objects/Lead/fields/Potential_Account_Matches__c.field-meta.xml
<CustomField>
    <fullName>Potential_Account_Matches__c</fullName>
    <description>holds the account IDs of each match found by the system</description>
    <label>Potential Account Matches</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>