force-app/main/default/objects/Lead/fields/Previous_Lead_Owner_s_Region__c.field-meta.xml
<CustomField>
    <fullName>Previous_Lead_Owner_s_Region__c</fullName>
    <label>Previous Lead Owner&apos;s Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>