force-app/main/default/objects/Lead/fields/PreviousLeadOwnersRole__c.field-meta.xml
<CustomField>
    <fullName>PreviousLeadOwnersRole__c</fullName>
    <description>This field will populate with the name of the Role of the previous Lead Owner if the lead is moved into the disqualified queues</description>
    <label>Previous Lead Owner&#39;s Role</label>
    <length>200</length>
    <type>Text</type>
</CustomField>