force-app/main/default/objects/Lead/fields/Primarily_Use_Webcasting_for__c.field-meta.xml
<CustomField>
    <fullName>Primarily_Use_Webcasting_for__c</fullName>
    <label>Primarily Use Webcasting for:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal Communication</fullName>
            </value>
            <value>
                <fullName>External Communication</fullName>
            </value>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
            <value>
                <fullName>Product Marketing</fullName>
            </value>
            <value>
                <fullName>Investor Relations, Continuing Education</fullName>
            </value>
            <value>
                <fullName>Crisis Communications</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>