force-app/main/default/objects/Lead/fields/Problem_Scenario_Date_Changed__c.field-meta.xml
<CustomField>
    <fullName>Problem_Scenario_Date_Changed__c</fullName>
    <description>Updated via workflow rule to capture the date that the Problem Scenario field was updated. Using field history tracking to track various dates over time.</description>
    <label>Problem Scenario Date Changed</label>
    <type>Date</type>
</CustomField>