force-app/main/default/objects/Lead/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Marketing Premier</fullName>
            </value>
            <value>
                <fullName>Free Workgroup</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Agencies</fullName>
            </value>
            <value>
                <fullName>Marketers</fullName>
            </value>
            <value>
                <fullName>SocialBridge for Marketers</fullName>
                <isActive>false</isActive>
                <label>SocialBridge for Marketers</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>