force-app/main/default/objects/Lead/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <label>Initial Product of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Audio: GlobalMeet Audio</fullName>
            </value>
            <value>
                <fullName>Audio: GlobalMeet Audio for Skype for Business</fullName>
            </value>
            <value>
                <fullName>Audio: GlobalMeet Webcast Managed Event</fullName>
            </value>
            <value>
                <fullName>Audio: Op. Assisted: Premium Event</fullName>
            </value>
            <value>
                <fullName>Audio: Op. Assisted: Standard Auditorium</fullName>
            </value>
            <value>
                <fullName>Bundle: GlobalMeet</fullName>
            </value>
            <value>
                <fullName>Bundle: GlobalMeet Webinar</fullName>
            </value>
            <value>
                <fullName>Web: Cisco WebEx</fullName>
            </value>
            <value>
                <fullName>Web: GlobalMeet</fullName>
            </value>
            <value>
                <fullName>Web: GlobalMeet Active Host</fullName>
            </value>
            <value>
                <fullName>Web: GlobalMeet Webcast</fullName>
            </value>
            <value>
                <fullName>Web: GlobalMeet Webcast Managed Event</fullName>
            </value>
            <value>
                <fullName>Web: GlobalMeet Web for Microsoft Lync</fullName>
            </value>
            <value>
                <fullName>Web: GlobalMeet Webinar</fullName>
            </value>
            <value>
                <fullName>Web: iMeet Central</fullName>
            </value>
            <value>
                <fullName>Web: UCaaS</fullName>
            </value>
            <value>
                <fullName>Web: vCube</fullName>
            </value>
            <value>
                <fullName>Web: Webcast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>