force-app/main/default/objects/Lead/fields/Product_updates__c.field-meta.xml
<CustomField>
    <fullName>Product_updates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email Subscription</description>
    <label>Product updates</label>
    <type>Checkbox</type>
</CustomField>